--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -152,10 +152,10 @@
       }
     }
     .health-count {
-      font-size: 30px;
+      font-size: 22px;
     }
     .icon {
-      @include square(80px);
+      @include square(75px);
     }
   }
   .blog-main {
@@ -514,10 +514,11 @@
       }
     }
     .health-count {
-      font-size: 20px;
+      font-size: 18px;
     }
     .icon {
       @include square(65px);
+      margin: 0 5px;
     }
   }
   .health-diet {
