--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -8,7 +8,8 @@
     <div class="about-desc get-up brand-brown-bg white health-descp relate">
       <h3 class="text-uppercase font-semibold">What is health design</h3>
       <p class="health-style font-baubodi">Only the fit know how fabulous it feels.</p>
-      <p class="health-descp">At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness expert, each nutrition plan is orchestrated to fit individualized needs without compromising on lifestyle. At Selfcare health overrides weight loss.</p>
+      <p class="health-descp">At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance
+        of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness expert, each nutrition plan is orchestrated to fit individualized needs without compromising on lifestyle. At Selfcare health overrides weight loss.</p>
     </div>
   </div>
 
