--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -15,7 +15,7 @@
                   <h5 class="text-uppercase text-bold brand-brown-dark font-semibold health-title">Total number of
                     <span class="block">Clients</span>
                   </h5>
-                  <h3 class="health-count text-left white text-bold">10348</h3>
+                  <h3 class="health-count text-left white text-bold">12479</h3>
                 </div>
                 <div class="icon inline-block v-top">
                   <img src="img/user.png" alt="" class="img-responsive">
@@ -28,8 +28,8 @@
                   <h5 class="text-uppercase text-bold brand-brown-dark font-semibold health-title">Total
                     <span class="block count">Weight Loss</span>
                   </h5>
-                  <h3 class="health-count text-left white text-bold">7500
-                    <span class="font-primary">in kgs</span>
+                  <h3 class="health-count text-left white text-bold">23494.12
+                    <span class="font-primary">kgs</span>
                   </h3>
                 </div>
                 <div class="icon inline-block">
@@ -43,7 +43,7 @@
                   <h5 class="text-uppercase text-bold  brand-brown-dark font-semibold health-title">Presence in
                     <span class="block">Countries</span>
                   </h5>
-                  <h3 class="health-count text-left white text-bold">38</h3>
+                  <h3 class="health-count text-left white text-bold">48</h3>
                 </div>
                 <div class="icon inline-block">
                   <img src="img/world.png" alt="" class="img-responsive">
