--- a/views/content/account.html
+++ b/views/content/account.html
@@ -84,7 +84,7 @@
                       </div>
                       <div class="form-group">
                         <div class="custom-select">
-                          <select name="" id="">
+                          <select name="" id="" class="form-control">
                             <option value="">Country *</option>
                           </select>
                         </div>
