--- a/views/content/termsandcondition.html
+++ b/views/content/termsandcondition.html
@@ -5,7 +5,7 @@
   </div>
   <div class="container">
     <div class="terms">
-      <p><b>PLEASE READ THESE TERMS OF USE CAREFULLY BEFORE USING THIS SITE</b></p>
+      <p><b>PLEASE READ THESE TERMS &amp; CONDITIONS OF USE CAREFULLY BEFORE USING THIS SITE</b></p>
       <p>By using this site, you grant your assent to these terms of use. If you do not agree to these terms of use, you are not authorized to use this website. These terms govern your use of the website, any content (such as text, data, information, software,
         graphics, or photographs) that
         <strong>Selfcare The Suman Agarwal Way</strong> and its syndicate members/affiliates (hereinafter &quot;
