--- a/views/content/selfcaretv.html
+++ b/views/content/selfcaretv.html
@@ -14,8 +14,8 @@
                 <div class="episode">
                   <h4>{{episode.title}}</h4>
                   <div class="episode-videoholder relate">
-                    <a href="{{episode.link}}" fancybox class="various fancybox.iframe">
-                      <img ng-src="{{episode.img}}" alt="" class="img-responsive">
+                    <a href="https://www.youtube.com/v/{{episode.url}}" fancybox class="various fancybox.iframe">
+                      <img ng-src="http://img.youtube.com/vi/{{episode.url}}/hqdefault.jpg" alt="" class="img-responsive">
                       <span class="get-center youtube-play"><i class="fa fa-youtube-play"></i></span>
                     </a>
                   </div>
