--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -6,8 +6,7 @@
 
   <div class="container">
     <div class="product-desc get-up brand-brown-bg white health-descp rel">
-      <p>We have created a whole range of healthy, deliious and tasty snacks so that you never miss out on your favourite treat. The best part is that all these munchies are all far lower in calories than their off-the-self versions and many of them are
-        even tastier.</p>
+      <p>{{productCategory.description}}</p>
     </div>
   </div>
 
