--- a/sass/main.scss
+++ b/sass/main.scss
@@ -349,12 +349,12 @@ button {
     font-size: 16px;
   }
   p {
-    margin: -5px 0 0;
-    font-size: 28px;
+    margin: 0;
+    font-size: 26px;
   }
   .weight-number {
     display: inline-block;
-    font-size: 36px;
+    font-size: 30px;
   }
 }
 .round {
