--- a/views/content/selfcaretv.html
+++ b/views/content/selfcaretv.html
@@ -9,8 +9,11 @@
         <h3 class="text-center tv-headline">Browse through the videos to know more about selfcare</h3>
         <div class="row">
           <div class="col-md-offset-1 col-md-10">
+            <div class="text-center" ng-if="selfcaretv.length <=0">
+              No videos found.
+            </div>
             <div class="row">
-              <div class="col-md-6"  ng-repeat="episode in selfcaretv">
+              <div class="col-md-6"  ng-repeat="episode in selfcaretv" ng-if="selfcaretv.length > 0">
                 <div class="episode">
                   <h4>{{episode.name}}</h4>
                   <div class="episode-videoholder relate">
