--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2350,6 +2350,7 @@ footer {
  .episode {
    padding: 0 15px;
    margin: 30px 0;
+   h4 { min-height: 40px; }
   }
   .youtube-play {
     color: #c01d20;
