--- a/views/menu.html
+++ b/views/menu.html
@@ -1,10 +1,10 @@
 <ul>
     <li ng-repeat="menu in navigation" class="{{menu.classis}}">
         <a href="{{menu.link}}">{{menu.name}}</a>
-        <!-- <ul class="dropdown-menu" ng-if="menu.subnav!='';">
+        <ul class="submenu" ng-if="menu.subnav!='';">
             <li ng-repeat="submenu in menu.subnav">
                 <a href="{{submenu.link}}">{{submenu.name}}</a>
             </li>
-        </ul> -->
+        </ul>
     </li>
 </ul>
